# sqbrowser

./: Cargo.toml  README.md  config_dark.json  config_light.json  main.py  pyproject.toml
src/: config.rs  data_source.rs  database.rs  file_reader.rs  main.rs  persistence.rs  ui.rs
