[package]
name = "sqbrowser"
version = "0.1.0"
edition = "2021"
description = "Simple SQLite database browser with TUI interface"

[[bin]]
name = "sqbrowser"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
ratatui = "0.29"
crossterm = "0.28"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
calamine = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
arrow = "53.0"
parquet = "53.0"
arboard = "3.4"